--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
     display:inline-block;
     height: 70px;
     width: 70px;
-}
+    margin-bottom: 40px;
+    }
 #black {
     background-color: rgb(0, 0, 0);
 }
@@ -21,4 +22,17 @@ body {
 }
 #green {
     background-color: rgb(5, 158, 5);
+}
+/* #pixel-board {
+    
+} */
+.pixel {     
+    background-color: white;
+    border: 1px solid rgb(0, 0, 0);
+    display:inline-block;
+    height: 40px;
+    width: 40px;
+    margin-right: -5px;
+    margin-bottom: -20px;
+
 }
