--- a/style.css
+++ b/style.css
@@ -1,39 +1,22 @@
 body {
-    background-color: white;
-}
-/* #color-palette{
-    
-} */
-
+  background-color: white;
+} 
 .color {
-    border: 1px solid rgb(0, 0, 0);
-    display:inline-block;
-    height: 70px;
-    width: 70px;
-    margin-bottom: 40px;
-    }
- #black {
-    background-color: rgb(0, 0, 0);
-} 
-/* #cor2 {
-    background-color: rgb(233, 10, 10);     
-} 
-#cor3 {
-    background-color: rgb(10, 10, 240);
+  border: 1px solid black;
+  display:inline-block;
+  height: 70px;
+  width: 70px;
+  margin-bottom: 40px;
 }
-#cor4 {
-    background-color: rgb(5, 158, 5); 
-}  */
-
-/* #pixel-board {
-    
-} */
+#black {
+  background-color: black;
+} 
 .pixel {     
-    background-color: white;
-    border: 1px solid rgb(0, 0, 0);
-    display:inline-block;
-    height: 40px;
-    width: 40px;
-    margin-right: -5px;
-    margin-bottom: -20px;
+  background-color: white;
+  border: 1px solid rgb(0, 0, 0);
+  display:inline-block;
+  height: 40px;
+  width: 40px;
+  margin-right: -5px;
+  margin-bottom: -20px;
 }
